cleanup code around MultiTwitch ready to add new features